--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.UTS_160418058">
         <activity
             android:name=".view.MainActivity"
